# grokit

./: .gitignore  README.md  pyproject.toml  rename.sh
grokit/: __init__.py  grokit.py  version.py
package_name/: __init__.py
