[build-system]
requires = ['setuptools>=64.0.0', 'build']
build-backend = 'setuptools.build_meta'

[project]
name = 'package_name'
dynamic = ['version']
description = 'description_value'
authors = [
    { name = 'author_value', email = 'email@example.com' },
]
license = { text = 'GNU General Public License v3 (GPLv3)' }
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = '>=3.10'
dependencies = [
    # Add your dependencies here
]

[project.urls]
Homepage = 'url_value'

[tool.setuptools.packages.find]
include = ['package_name']

[tool.setuptools.package-data]
'package_name' = ['*', '**/*']

[tool.setuptools.dynamic]
version = {attr = 'package_name.version.__version__'}
