[build-system]
requires = ['setuptools>=64.0.0', 'build']
build-backend = 'setuptools.build_meta'

[project]
name = 'grokit'
dynamic = ['version']
description = 'Unofficial Python client for Grok models'
authors = [
    { name = 'Rodrigo Martínez (brunneis)', email = 'dev@brunneis.com' },
]
license = { text = 'GNU General Public License v3 (GPLv3)' }
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = '>=3.10'
dependencies = [
    'requests',
]

[project.urls]
Homepage = 'https://github.com/EveripediaNetwork/grokit'

[tool.setuptools.packages.find]
include = ['grokit']

[tool.setuptools.package-data]
'grokit' = ['*', '**/*', '!**/__pycache__']

[tool.setuptools.dynamic]
version = {attr = 'grokit.version.__version__'}
